# shared-autonomy-swarm-based-SaR-framework

./: .gitignore  README.rst  readme.md  run-project.sh
AUC-Thesis-Leithy-DT/: odom_echo.py
AUC-Thesis-Leithy-DT/ROS-master/actuate/: HumanControl.py  actuate.py  actuate_dog_tb.py  actuate_mirror.py  actuate_singlebot.py  coverage_tracker.py  display_robot_names.py  old.py  results.csv  shared_autonomy_log.csv  (+2 more)
Digital_Twin_heirarchy/middleware_layer/: bidirectional_control.py  camera_stream.py  dashboard_control.py
MAin/: pyproject.toml
NameSpace/: dashboardkelaby.html  server.js
Physical_Twin/ROS_layer/: offboard_ctrl.py  sensors.py
Physical_Twin/middleware_layer/: control_middleware.py  sensors_up.py
SDK_NL/database/: query_generator.py
SDK_NL/middlewaree/: middleware_generator.py
SDK_NL/namespace/: generate_views.py
SDK_NL/ros_layer/: node_config.yml  ros_node.py
SDK_NL/utilitiess/: templates.py
Swarm-Behavior-Package/: coverage_log__robot_0.csv  start_simulation.sh  start_simulation.sh.save  start_simulation.sh.save.1  start_simulation.sh.save.2  start_simulation.sh.save.3  start_simulation.sh.save.4  start_simulation.sh.save.5
Swarm-Behavior-Package/models/: turtlebot3_burger_invisible_sensors.urdf
docs/source/: conf.py  dev_guide.rst  faq.rst  index.rst  setting_up.rst
ros_humble_2_ws_for_testing/src/my_turtlebot3_simulation/: package.xml  setup.cfg  setup.py
ros_humble_2_ws_for_testing/src/my_turtlebot3_simulation/launch/: multiple_turtlebot3.launch.py
ros_humble_2_ws_for_testing/src/my_turtlebot3_simulation/scripts/: actuate.py
(+53 files in other folders)
